--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: top_en.png;
+  background-image: top_en.png
   background-size: cover;
   color: white;
   text-align: center;
